<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="OverallStationStatus" Id="{09fd2e57-9481-43f0-a91b-92fa102b8917}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE OverallStationStatus :
(
	eDisabled :=0, // Gsilver
	eWarning,     //  Yellow 
	eError,       // Red  
	eHoming,      // Orange
	eWaitingForParts, // Blue
	eRunning, // Green 
	eCycleStop // Purple
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>