<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="eCycleControlState" Id="{7cda1b55-a93f-45c0-87ea-ed0ea7a1a662}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE eCycleControlState :
(
	eUnknown := 101,
    eInit,
	eWaitForHoming,
	eReady,
	eAutoRun,
	eStartStop,
	eWaitForHomingAfterEStop,
    eError
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>